<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background1">
    <!--    搜索栏   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:layout_width="@dimen/searchWidth"
            android:layout_height="@dimen/searchHeight"
            android:hint="@string/searchHint"
            android:textColorHint="@color/black"
            android:textSize="@dimen/searchHintFontSize"
            android:background="@drawable/search_bar_background"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            >
        </EditText>
        <ImageButton
            android:layout_width="@dimen/searchPhotoSize"
            android:layout_height="@dimen/searchPhotoSize"
            android:id="@+id/searchAnimalButton2"
            android:src="@drawable/search"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="-1dp"
            >
        </ImageButton>
        <ImageButton
            android:layout_width="@dimen/searchPhotoSize"
            android:layout_height="@dimen/searchPhotoSize"
            android:id="@+id/search_button2"
            android:scaleType="centerCrop"
            android:src="@drawable/camera"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="-2dp">
        </ImageButton>
        <ImageButton
            android:layout_width="@dimen/searchPhotoSize"
            android:layout_height="@dimen/searchPhotoSize"
            android:id="@+id/publish"
            android:scaleType="centerCrop"
            android:src="@drawable/publish_button"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp">
        </ImageButton>
    </LinearLayout>


    <!--    填充页面内容  -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/senwuyu"

            ></ImageView>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="2020-5-20"
                    android:textSize="@dimen/dateSize"
                    android:textColor="@color/white"></TextView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp">
                    <ImageView
                        android:layout_width="@dimen/photoWidth"
                        android:layout_height="@dimen/photoHeight"
                        android:scaleType="centerCrop"
                        android:src="@drawable/zanglingyang1"
                        ></ImageView>
                    <ImageView
                        android:layout_width="@dimen/photoWidth"
                        android:layout_height="@dimen/photoHeight"
                        android:scaleType="centerCrop"
                        android:src="@drawable/zanglingyang2"
                        ></ImageView>
                    <ImageView
                        android:layout_width="@dimen/photoWidth"
                        android:layout_height="@dimen/photoHeight"
                        android:scaleType="centerCrop"
                        android:src="@drawable/zanglingyang3"
                        ></ImageView>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="165dp"
                    android:padding="5dp"
                    android:background="@color/white"
                    android:textColor="@color/textBlack"
                    android:lineHeight="20sp"
                    android:textSize="18sp"
                    android:hint="@string/zanglingyangText">
                </TextView>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="245dp"
                    >

                    <ImageView
                        android:layout_width="@dimen/dianzanSize"
                        android:layout_height="@dimen/dianzanSize"
                        android:src="@drawable/dianzan"
                        android:layout_marginLeft="265dp"
                        ></ImageView>
                    <Button
                        android:layout_width="60dp"
                        android:layout_height="38dp"
                        android:hint="@string/more"
                        android:padding="0dp"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="-3dp"
                        android:layout_marginLeft="320dp"
                        >
                    </Button>
                </FrameLayout>
            </FrameLayout>



            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="90dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="2020-4-13"
                    android:textSize="@dimen/dateSize"
                    android:textColor="@color/white"></TextView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp">
                    <ImageView
                        android:layout_width="@dimen/photoWidth"
                        android:layout_height="@dimen/photoHeight"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bird1"
                        ></ImageView>
                    <ImageView
                        android:layout_width="@dimen/photoWidth"
                        android:layout_height="@dimen/photoHeight"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bird2"
                        ></ImageView>
                    <ImageView
                        android:layout_width="@dimen/photoWidth"
                        android:layout_height="@dimen/photoHeight"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bird3"
                        ></ImageView>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="165dp"
                    android:padding="5dp"
                    android:background="@color/white"
                    android:textColor="@color/textBlack"
                    android:lineHeight="20sp"
                    android:textSize="18sp"
                    android:hint="@string/birdText">
                </TextView>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="245dp"
                    >

                    <ImageView
                        android:layout_width="@dimen/dianzanSize"
                        android:layout_height="@dimen/dianzanSize"
                        android:src="@drawable/dianzan"
                        android:layout_marginLeft="265dp"
                        ></ImageView>
                    <Button
                        android:layout_width="60dp"
                        android:layout_height="38dp"
                        android:hint="@string/more"
                        android:padding="0dp"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="-3dp"
                        android:layout_marginLeft="320dp"
                        >
                    </Button>
                </FrameLayout>
            </FrameLayout>



        </LinearLayout>







    </ScrollView>









    <!--  底部导航栏  -->
    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            >
            <ImageButton
                android:layout_width="@dimen/bottonButton"
                android:layout_height="@dimen/bottonButton"
                android:id="@+id/bottomButton1"
                android:scaleType="centerCrop"
                android:src="@drawable/module_latest_message"></ImageButton>
            <ImageButton
                android:layout_width="@dimen/bottonButton"
                android:layout_height="@dimen/bottonButton"
                android:id="@+id/bottomButton2"
                android:scaleType="centerCrop"
                android:src="@drawable/module_special_topic"
                ></ImageButton>
            <ImageButton
                android:layout_width="@dimen/bottonButton"
                android:layout_height="@dimen/bottonButton"
                android:id="@+id/bottomButton3"
                android:scaleType="centerCrop"
                android:src="@drawable/module_animal_list"
                ></ImageButton>
            <ImageButton
                android:layout_width="@dimen/bottonButton"
                android:layout_height="@dimen/bottonButton"
                android:id="@+id/bottomButton4"
                android:scaleType="centerCrop"
                android:src="@drawable/module_report"
                ></ImageButton>
            <ImageButton
                android:layout_width="@dimen/bottonButton"
                android:layout_height="@dimen/bottonButton"
                android:id="@+id/bottomButton5"
                android:scaleType="centerCrop"
                android:src="@drawable/module_personal_center"
                ></ImageButton>

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>