<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthActivity"
    android:background="@color/personalCenterBackgroundColor">
    <!--    填充页面内容  -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/personalCenter"
            android:textSize="30sp"
            android:textColor="@color/personalCenterTextColor"

            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/headImageSize"
            android:layout_height="@dimen/headImageSize"
            android:id="@+id/headImage"
            android:src="@drawable/headimage"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/personalName"
                android:textSize="35sp"
                android:lineHeight="50sp"></TextView>
            <TextView
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:hint="@string/personalCenterHint"
                android:textSize="20sp"
                android:layout_marginTop="55dp"
                android:textColor="@color/textBlack"></TextView>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="160dp"
        android:paddingLeft="55dp">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/daka"
            android:scaleType="centerCrop"
            android:src="@drawable/daka"
            android:layout_marginLeft="220dp"
            ></ImageView>
        <TextView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:hint="打卡"
            android:textSize="20sp"
            android:textColor="@color/personalCenterTextColor"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="215dp"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myInfo"
            android:background="@drawable/head_image_background"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="1dp"
            >
            <ImageView
                android:layout_width="@dimen/personalCenterButtonSize"
                android:layout_height="@dimen/personalCenterButtonSize"
                android:src="@drawable/myinfo"
                android:layout_marginLeft="5dp"
                android:layout_marginVertical="5dp"
                ></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="个人资料"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="11dp"
                android:textSize="@dimen/personalCenterModuleFontSize"></TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rowhead"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="360dp"></ImageView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myMessage"
            android:background="@drawable/head_image_background"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="1dp"
            >
            <ImageView
                android:layout_width="@dimen/personalCenterButtonSize"
                android:layout_height="@dimen/personalCenterButtonSize"
                android:src="@drawable/mymessage"
                android:layout_marginLeft="5dp"
                android:layout_marginVertical="5dp"
                ></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="我的消息"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="11dp"
                android:textSize="@dimen/personalCenterModuleFontSize"></TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rowhead"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="360dp"></ImageView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myScore"
            android:background="@drawable/head_image_background"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="1dp"
            >
            <ImageView
                android:layout_width="@dimen/personalCenterButtonSize"
                android:layout_height="@dimen/personalCenterButtonSize"
                android:src="@drawable/myscore"
                android:layout_marginLeft="5dp"
                android:layout_marginVertical="5dp"
                ></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="我的积分"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="11dp"
                android:textSize="@dimen/personalCenterModuleFontSize"></TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rowhead"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="360dp"></ImageView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myFriend"
            android:background="@drawable/head_image_background"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="1dp"
            >
            <ImageView
                android:layout_width="@dimen/personalCenterButtonSize"
                android:layout_height="@dimen/personalCenterButtonSize"
                android:src="@drawable/myfriend"
                android:layout_marginLeft="5dp"
                android:layout_marginVertical="5dp"
                ></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="动物伙伴"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="11dp"
                android:textSize="@dimen/personalCenterModuleFontSize"></TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rowhead"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="360dp"></ImageView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myDonate"
            android:background="@drawable/head_image_background"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="1dp"
            >
            <ImageView
                android:layout_width="@dimen/personalCenterButtonSize"
                android:layout_height="@dimen/personalCenterButtonSize"
                android:src="@drawable/mydonate"
                android:layout_marginLeft="5dp"
                android:layout_marginVertical="5dp"
                ></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="爱心捐款"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="11dp"
                android:textSize="@dimen/personalCenterModuleFontSize"></TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rowhead"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="360dp"></ImageView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myAnswer"
            android:background="@drawable/head_image_background"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="1dp"
            >
            <ImageView
                android:layout_width="@dimen/personalCenterButtonSize"
                android:layout_height="@dimen/personalCenterButtonSize"
                android:src="@drawable/myanswer"
                android:layout_marginLeft="5dp"
                android:layout_marginVertical="5dp"
                ></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="知识问答"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="11dp"
                android:textSize="@dimen/personalCenterModuleFontSize"></TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rowhead"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="360dp"></ImageView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/childModule"
            android:background="@drawable/head_image_background"
            android:layout_marginHorizontal="5dp"
            >
            <ImageView
                android:layout_width="@dimen/personalCenterButtonSize"
                android:layout_height="@dimen/personalCenterButtonSize"
                android:src="@drawable/childmodule"
                android:layout_marginLeft="5dp"
                android:layout_marginVertical="5dp"
                ></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="儿童模式"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="11dp"
                android:textSize="@dimen/personalCenterModuleFontSize"></TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rowhead"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="360dp"></ImageView>
        </FrameLayout>
    </LinearLayout>



    <!--  底部导航栏  -->
    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            >
            <ImageButton
                android:layout_width="@dimen/bottonButton"
                android:layout_height="@dimen/bottonButton"
                android:id="@+id/bottomButton1"
                android:scaleType="centerCrop"
                android:src="@drawable/module_latest_message"></ImageButton>
            <ImageButton
                android:layout_width="@dimen/bottonButton"
                android:layout_height="@dimen/bottonButton"
                android:id="@+id/bottomButton2"
                android:scaleType="centerCrop"
                android:src="@drawable/module_special_topic"
                ></ImageButton>
            <ImageButton
                android:layout_width="@dimen/bottonButton"
                android:layout_height="@dimen/bottonButton"
                android:id="@+id/bottomButton3"
                android:scaleType="centerCrop"
                android:src="@drawable/module_animal_list"
                ></ImageButton>
            <ImageButton
                android:layout_width="@dimen/bottonButton"
                android:layout_height="@dimen/bottonButton"
                android:id="@+id/bottomButton4"
                android:scaleType="centerCrop"
                android:src="@drawable/module_report"
                ></ImageButton>
            <ImageButton
                android:layout_width="@dimen/bottonButton"
                android:layout_height="@dimen/bottonButton"
                android:id="@+id/bottomButton5"
                android:scaleType="centerCrop"
                android:src="@drawable/module_personal_center"
                ></ImageButton>

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>